--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,13 +19,13 @@
 @import "bootstrap-sprockets";
 
 // Import cerulean variables
-@import "bootswatch/sandstone/variables";
+@import "bootswatch/superhero/variables";
 
 // Then bootstrap itself
 @import "bootstrap";
 
 // Bootstrap body padding for fixed navbar
-body { padding-top: 60px; }
+// body { padding-top: 60px; }
 
 // And finally bootswatch style itself
-@import "bootswatch/sandstone/bootswatch";
+@import "bootswatch/superhero/bootswatch";
