user model completed

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Welcome to Loan Fone</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="jumbotron">
+  <h1 align="center"><strong>Loan\Fone</strong></h1><br>
+  <h4 align="center">Your shattered iPhone X screen is going to cost <strong>$499</strong> to replace?!</h4>
+  <h3 align="center">Grab a Loan\Fone!</h3>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="col-md-6 lists">
+      <%#= image_tag 'bad.jpg', alt: 'broken phone icon' %>
+      <h2>Dead phone?</h2>
+      <ul>
+        <li>Smashed screen?</li>
+        <li>Water damage?</li>
+        <li>Camera broken?</li>
+        <li>Microphone distorted?</li>
+        <li>No coverage?</li>
+      </ul>
+    </div>
+    <div class="col-md-6 lists">
+    <%#= image_tag 'good.jpg', alt: 'happy new phone icon' %>
+    <h2>Loan\Fone!</h2>
+      <ul>
+        <li>You choose the brand!</li>
+        <li>You choose how much to pay!</li>
+        <li>Pickup or delivery!</li>
+        <li>Extended Loan\Fone's available!</li>
+        <li>No worries!</li>
+      </ul>
+  </div>
+</div>
