--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,23 +5,67 @@
   </div>
   <div class="panel-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <div class="form-group">
+    <div class="form-group">
+      <div class="col-md-12">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Enter your email address'  %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-6">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, class: 'form-control', placeholder: 'First name'  %>
+      </div>
+      <div class="col-md-6">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name, class: 'form-control', placeholder: 'Last name'  %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-6">
+        <%= f.label :street_address %>
+        <%= f.text_field :street_address, class: 'form-control', placeholder: '123 Michael Jordan Street' %>
+      </div>
+      <div class="col-md-6">
+        <%= f.label :suburb %>
+        <%= f.text_field :suburb, class: 'form-control', placeholder: 'Suburb' %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-6">
+        <%= f.label :state %>
+        <%= f.text_field :state, class: 'form-control', placeholder: 'QLD, NSW etc' %>
+      </div>
+      <div class="col-md-6">
+        <%= f.label :postcode %>
+        <%= f.text_field :postcode, class: 'form-control', placeholder: 'Postcode' %>
+      </div>
+    </div>
+      <div class="form-group">
+        <div class="col-md-12">
+          <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
+          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        </div>
       </div>
       <div class="form-group">
-        <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        <div class="col-md-12">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control'  %>
+        </div>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control'  %>
+        <div class="col-md-12">
+          <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
+          <%= f.password_field :current_password, class: 'form-control' %>
+        </div>
       </div>
-      <div class="form-group">
-        <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
-        <%= f.password_field :current_password, class: 'form-control' %>
+      <div class="row">
+        <div class="col-med-5"></div>
+          <div align="center" class="col-med-2 submit">
+            <%= f.submit t('.update', default: 'Update'), class: 'btn btn-lg btn-primary' %>
+          </div>
+        <div class="col-med-5"></div>
       </div>
-      <%= f.submit t('.update', default: 'Update'), class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
