--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,17 +6,53 @@
   <div class="panel-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f| %>
       <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        <div class="col-md-12">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Enter your email address'  %>
+        </div>
       </div>
       <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
+        <div class="col-md-6">
+          <%= f.label :first_name %>
+          <%= f.email_field :first_name, class: 'form-control', placeholder: 'First name'  %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :last_name %>
+          <%= f.email_field :last_name, class: 'form-control', placeholder: 'Last name'  %>
+        </div>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <div class="col-md-6">
+          <%= f.label :street_address %>
+          <%= f.email_field :street_address, class: 'form-control', placeholder: '123 Michael Jordan Street' %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :suburb %>
+          <%= f.email_field :suburb, class: 'form-control', placeholder: 'Suburb' %>
+        </div>
       </div>
+      <div class="form-group">
+        <div class="col-md-6">
+          <%= f.label :state %>
+          <%= f.email_field :state, class: 'form-control', placeholder: 'QLD, NSW etc' %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :postcode %>
+          <%= f.email_field :postcode, class: 'form-control', placeholder: 'Postcode' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-md-12">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-md-12">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+      </div><br><br>
       <%= f.submit t('.sign_up', default: 'Sign up'), class: 'btn btn-primary' %>
     <% end %>
   </div>
