--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,8 @@
         <%= link_to 'Loan\Fone', root_path, class: 'navbar-brand' %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Find a Fone", "/path1"  %></li>
-            <li><%= link_to "Loan a Fone", "/path2"  %></li>
+            <li><%= link_to "Find a Fone", root_path  %></li>
+            <li><%= link_to "Loan a Fone", new_phone_path  %></li>
             <li><%= link_to "About", "/path3"  %></li>
           </ul>
           <ul class="nav navbar-right col-md-6">
