--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,31 +14,31 @@
       <div class="form-group">
         <div class="col-md-6">
           <%= f.label :first_name %>
-          <%= f.email_field :first_name, class: 'form-control', placeholder: 'First name'  %>
+          <%= f.text_field :first_name, class: 'form-control', placeholder: 'First name'  %>
         </div>
         <div class="col-md-6">
           <%= f.label :last_name %>
-          <%= f.email_field :last_name, class: 'form-control', placeholder: 'Last name'  %>
+          <%= f.text_field :last_name, class: 'form-control', placeholder: 'Last name'  %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-6">
           <%= f.label :street_address %>
-          <%= f.email_field :street_address, class: 'form-control', placeholder: '123 Michael Jordan Street' %>
+          <%= f.text_field :street_address, class: 'form-control', placeholder: '123 Michael Jordan Street' %>
         </div>
         <div class="col-md-6">
           <%= f.label :suburb %>
-          <%= f.email_field :suburb, class: 'form-control', placeholder: 'Suburb' %>
+          <%= f.text_field :suburb, class: 'form-control', placeholder: 'Suburb' %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-6">
           <%= f.label :state %>
-          <%= f.email_field :state, class: 'form-control', placeholder: 'QLD, NSW etc' %>
+          <%= f.text_field :state, class: 'form-control', placeholder: 'QLD, NSW etc' %>
         </div>
         <div class="col-md-6">
           <%= f.label :postcode %>
-          <%= f.email_field :postcode, class: 'form-control', placeholder: 'Postcode' %>
+          <%= f.text_field :postcode, class: 'form-control', placeholder: 'Postcode' %>
         </div>
       </div>
       <div class="form-group">
