--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 <div class="jumbotron">
-  <h1 align="center"><strong>Loan\Fone</strong></h1><br>
-  <h4 align="center">Your shattered iPhone X screen is going to cost <strong>$499</strong> to replace?!</h4>
-  <h3 align="center">Grab a Loan\Fone!</h3>
+  <h3 align="center">Your shattered iPhone X screen is going to cost <strong>$499</strong> to replace?!</h3>
+  <h4 align="center">Maybe it's time to grab a</h4><br>
+  <h1 align="center"><strong>Loan\Fone</strong></h1>
+
+
 </div>
 <div class="row">
   <div class="col-md-12">
@@ -20,10 +22,10 @@
     <%#= image_tag 'good.jpg', alt: 'happy new phone icon' %>
     <h2>Loan\Fone!</h2>
       <ul>
-        <li>You choose the brand!</li>
-        <li>You choose how much to pay!</li>
+        <li>You choose your favourite brand!</li>
+        <li>Extensive phones available!</li>
         <li>Pickup or delivery!</li>
-        <li>Extended Loan\Fone's available!</li>
+        <li>How long? Your choice!</li>
         <li>No worries!</li>
       </ul>
   </div>
