--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,13 @@
 .jumbotron {
-  background: url(loanfonewall.jpg);
+  background: url(loanfonewall2.jpg);
   background-size: cover;
   background-position: top;
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 1);
+  margin-bottom: 0;
+}
+
+h1 {
+  margin: 0;
 }
 
 .lists {
