--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -68,6 +68,9 @@
       </div>
     <% end %>
   </div>
+  <div align="center">
+    <iframe width="95%" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBsx2f63R9dYrVPqA2KBt2lTwJ9oJm-ABE&q=<% @user.maps_address %>" allowfullscreen></iframe>
+  </div>
 </div>
 
 <br><p><%= link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete %></p>
