--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,9 @@
   <h3 align="center">Your shattered iPhone X screen is going to cost <strong>$499</strong> to replace?!</h3>
   <h4 align="center">Maybe it's time to grab a</h4><br>
   <h1 align="center"><strong>Loan\Fone</strong></h1>
-
 </div>
+
+<%= render 'carosel' %>
 <div class="row">
   <div class="col-md-12">
     <div class="col-md-6 lists">
