--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,14 +1,11 @@
 .jumbotron {
-  background: url(loanfonewall2.jpg);
+  background: url(loanfonewall.jpg);
   background-size: cover;
-  background-position: top;
+  background-position: bottom;
   text-shadow: 0px 3px 3px rgba(0, 0, 0, 1);
   margin-bottom: 0;
 }
 
-h1 {
-  margin: 0;
-}
 
 .lists {
   text-align: center;
@@ -18,4 +15,41 @@ h1 {
   h2 {
     padding-left: 30px;
   }
+}
+
+.lglogo img {
+  width: 90%;
+}
+
+.card {
+  text-align: center;
+  background-color: #4B5C69;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid rgba(#E86027, 0.51);
+}
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 999px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  background: red;
+  cursor: inherit;
+  display: block;
+}
+
+input[readonly] {
+  background-color: white !important;
+  cursor: text !important;
 }
