--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 <div class="jumbotron">
   <h3 align="center">Your shattered iPhone X screen is going to cost <strong>$499</strong> to replace?!</h3>
   <h4 align="center">Maybe it's time to grab a</h4><br>
-  <h1 align="center"><strong>Loan\Fone</strong></h1>
+  <div align="center" class="lglogo">
+    <%= image_tag 'logo4.png', alt: 'large LoanFone logo' %>
+  </div>
 </div>
 
 <%= render 'carosel' %>
