--- a/app/views/welcome/_carosel.html.erb
+++ b/app/views/welcome/_carosel.html.erb
@@ -10,15 +10,15 @@
   <!-- Wrapper for slides -->
 
   <div class="carousel-inner" role="listbox">
-    <div class="item"><img alt="Slide 1" src="http://www.a2zinc.net/show6/Custom/images/interface/slide1.jpg" style="width: 100%;"></div>
+    <div class="item"><%= image_tag '5.jpg' %></div>
 
-    <div class="item active"><img alt="Slide 2" src="http://www.a2zinc.net/show6/Custom/images/interface/slide2.jpg" style="width: 100%;"></div>
+    <div class="item active"><%= image_tag '2.jpg' %></div>
 
-    <div class="item"><img alt="Slide 3" src="http://www.a2zinc.net/show6/Custom/images/interface/slide3.jpg" style="width: 100%;"></div>
+    <div class="item"><%= image_tag '3.jpg' %></div>
 
-    <div class="item"><img alt="Slide 4" src="http://www.a2zinc.net/show6/Custom/images/interface/slide4.jpg" style="width: 100%;"></div>
+    <div class="item"><%= image_tag '4.jpg' %></div>
 
-    <div class="item"><img alt="Slide 5" src="http://www.a2zinc.net/show6/Custom/images/interface/slide5.jpg" style="width: 100%;"></div>
+    <div class="item"><%= image_tag '5.jpg' %></div>
   </div>
   <!-- Controls -->
   <a class="left carousel-control" data-slide="prev" href="#carousel-example-generic" role="button">
