--- a/app/views/phones/show.html.erb
+++ b/app/views/phones/show.html.erb
@@ -3,7 +3,7 @@
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
-  <%= image_tag @phone.image, alt: 'Phone of customers mobile to loan' %>
+  <%= image_tag 'xiaomi-mi-mix-2-front.jpg', alt: 'Phone of customers mobile to loan', width: '500' %>
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:brand) %>:</strong></dt>
   <dd><%= @phone.brand %></dd>
@@ -13,6 +13,8 @@
   <dd>$<%= @phone.priceperweek %></dd>
   <dt><strong><%= model_class.human_attribute_name(:condition) %>:</strong></dt>
   <dd><%= @phone.condition %></dd>
+  <dt><strong>Delivery?</strong></dt>
+  <dd><label class="checkbox-inline"><input type="checkbox" value="">Pick up?</label><label class="checkbox-inline"><input type="checkbox" value="">Delivery?</label></dd>
 </dl>
 
 <%= form_tag charges_path do %>
